--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@planship/svelte",
-  "version": "0.3.0-alpha18",
+  "version": "0.3.0-alpha20",
   "author": "Pawel Wojnarowicz",
   "license": "MIT",
   "homepage": "https://planship.io",
@@ -23,7 +23,7 @@
   "scripts": {
     "clean": "rimraf ./dist && rimraf ./coverage",
     "test:types": "svelte-check --tsconfig ./tsconfig.json",
-    "lint": "eslint --ext .svelte,.ts ./src",
+    "lint": "eslint",
     "test:lib": "vitest",
     "test:lib:dev": "pnpm run test:lib --watch",
     "test:build": "publint --strict",
@@ -35,7 +35,7 @@
     "@sveltejs/package": "^2.3.1",
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
     "@testing-library/svelte": "^5.1.0",
-    "eslint-plugin-svelte": "^2.40.0",
+    "eslint-plugin-svelte": "^2.43.0",
     "svelte": "^4.2.17",
     "svelte-check": "^3.7.1",
     "svelte-eslint-parser": "^0.39.1"
