--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
     "svelte": "^3.54.0 || ^4.0.0 || ^5.0.0-next.0"
   },
   "dependencies": {
-    "@planship/fetch": "0.3.0-alpha6"
+    "@planship/fetch": "0.3.2"
   }
 }
